# AIS2202_estimation

./: CMakeLists.txt  README.md  data.csv  dataEstimate.csv  main.cpp  plotting.py  plts'.py
dataset/: 0-calibration_fts-accel.csv
estimation/: CMakeLists.txt  kalman_filter.cpp
estimation/include/: kalman_filter.h
estimation/include/estimation/: kalman_filter.h
parameter_estimation/: 0-calibration_fts-accel.csv  CMakeLists.txt  main.cpp
parameter_estimation/include/: ParameterEstimation.h  fusion.hpp  fusionv2.hpp  kompis.hpp  variance.h
state_estimation/: CMakeLists.txt  kalman_filter.cpp  main.cpp
state_estimation/include/: kalman_filter.h
